--- a/sources/sections/data-dictionary.adoc
+++ b/sources/sections/data-dictionary.adoc
@@ -5,9 +5,9 @@
 ==== ConformanceClass
 
 set of conformance tests that must be passed to receive a single certificate of conformance (Clause 4.2)
-NOTE:: When no ambiguity is possible, the word test may be left out, so conformance test class may be called a conformance class. +
+NOTE:  When no ambiguity is possible, the word test may be left out, so conformance test class may be called a conformance class. +
 In the ModSpec, the set of requirements tested by the conformance tests within a conformance class is a requirements class and its dependencies. Optional requirements will be in a separate requirements class with other requirements that are part of the same option. Each requirements class corresponds to a separate conformance class +
-Each requirements class will be in a 1 to 1 correspondence to a similarly named conformance class that tests all of the requirements class’s requirements. +
+Each requirements class will be in a 1 to 1 correspondence to a similarly named conformance class that tests all of the requirements in the requirements class. +
 All requirements in a conformance class will have the same standardization target type. 
 
 [cols="1a"]
@@ -40,10 +40,10 @@ All requirements in a conformance class will have the same standardization targe
 
 ==== ConformanceModule
 
-a set of related tests, all within a single conformance test class 
+a set of related tests within a single conformance test class. A conformance test module is associated with one and only one requirements module 
 [ISO 19105] 
 
-NOTE:: When there is no ambiguity, the word test may be omitted, i.e. conformance test module is the same as conformance module. Conformance modules may be nested in a hierarchical way. +
+NOTE:  When there is no ambiguity, the word test may be omitted, i.e. conformance test module is the same as conformance module. Conformance modules may be nested in a hierarchical way. +
 This term and those associated with it are included here for consistency with ISO 19105. 
 
 [cols="1a"]
@@ -68,9 +68,9 @@ This term and those associated with it are included here for consistency with IS
 
 set of conformance classes that define tests for all requirements of a standard or abstract specification
 
-NOTE:: The conformance suite is the union of all conformance classes. It is by definition the conformance class of the entire specification. 
+NOTE:  The conformance suite is the union of all conformance classes. It is by definition the conformance class of the entire standard or abstract specification. 
 
-In this standard, each requirement is mandatory within its conformance class and each requirement is tested in at least one conformance test. 
+In the ModSpec, each requirement is mandatory within its conformance class and each requirement is tested in at least one conformance test. 
 
 [cols="1a"]
 |===
@@ -100,13 +100,13 @@ test, abstract or real, of one or more requirements contained within a standard,
 !===
 !{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
 
-!{set:cellbgcolor:#FFFFFF}test  ! <<ConformanceTest-section,ConformanceTest>> ![1..*] !
- 
-!{set:cellbgcolor:#FFFFFF}  ! <<ConformanceModule-section,ConformanceModule>>  ![] !
-
 !{set:cellbgcolor:#FFFFFF}tests  ! <<ConformanceTest-section,ConformanceTest>> ![1..*] !Conformance tests that when passed confirm the satisfaction of this requriement. NOTE: If this requirment is a requirement part, it may or may not have a corresponding conformance test.
  
 !{set:cellbgcolor:#FFFFFF}  ! <<Requirement-section,Requirement>>  ![1] !
+
+!{set:cellbgcolor:#FFFFFF}test  ! <<ConformanceTest-section,ConformanceTest>> ![1..*] !
+ 
+!{set:cellbgcolor:#FFFFFF}  ! <<ConformanceModule-section,ConformanceModule>>  ![] !
 !===
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
@@ -130,7 +130,7 @@ test, abstract or real, of one or more requirements contained within a standard,
 
 test for a particular requirement or a set of related requirements 
 
-NOTE:: When there is no ambiguity, the word case may be omitted. i.e. conformance test is the same as conformance test case. 
+NOTE::  When there is no ambiguity, the word case may be omitted. i.e. conformance test is the same as conformance test case. 
 
 [cols="1a"]
 |===
@@ -166,11 +166,9 @@ NOTE:: When there is no ambiguity, the word case may be omitted. i.e. conformanc
 
 ==== CoreRequirementsClass
 
-Original
+unique requirements class that must be satisfied by any conformant standardization targets associated to the standard
 
-unique requirements class that must be satisfied by any conformant standardization targets associated to the specification 
-
-NOTE:: The core requirements class is unique because if it was possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
+NOTE:  The core requirements class is unique because if it was possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
 
 The core can refer to this requirements class, its associated conformance test class or the software module that implements that requirements class. 
 
@@ -190,8 +188,6 @@ The core can refer to this requirements class, its associated conformance test c
 
 ==== GeneralRecommendation
 
-Original
-
 recommendation applying to all entities in a specification model 
 
 [cols="1a"]
@@ -210,9 +206,9 @@ recommendation applying to all entities in a specification model
 
 ==== InformativeStatement
 
-expression in a document conveying information
+expression in a document conveying non-normative information
 
-NOTE: Includes all statements in a document not part of the normative requirements, recommendations, or conformance tests. Included for completeness.
+NOTE::  Includes all statements in a document not part of the normative requirements, recommendations, permissions, or conformance tests. Included for completeness.
 
 [cols="1a"]
 |===
@@ -220,9 +216,9 @@ NOTE: Includes all statements in a document not part of the normative requiremen
 !===
 !{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
 
-!{set:cellbgcolor:#FFFFFF}guidance  ! <<InformativeStatement-section,InformativeStatement>> ![0..*] !
+!{set:cellbgcolor:#FFFFFF}  ! <<InformativeStatement-section,InformativeStatement>> ![] !
  
-!{set:cellbgcolor:#FFFFFF}  ! <<RequirementsModule-section,RequirementsModule>>  ![] !
+!{set:cellbgcolor:#FFFFFF}  ! <<Specification-section,Specification>>  ![] !
 !===
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
@@ -232,13 +228,53 @@ NOTE: Includes all statements in a document not part of the normative requiremen
 !===
 |=== 
 
+[[Model-section]]
+
+==== Model
+
+A representation of those aspects of the standardization target type which are to be governed by a standard. The model captures both the conceptual and logical properties of the standardization target type. The requirements promulgated by a standard should be expressed in terms of those conceptual and logical properties.
+
+In short, the model provides the vocabulary for expressing requirements.
+
+[cols="1a"]
+|===
+[cols="15,20,5,55",frame=none,grid=none,options="header"]
+!===
+!{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
+!===
+[cols="15,20,5,55",frame=none,grid=none,options="header"]
+!===
+!{set:cellbgcolor:#DDDDDD} *Attribute* !*Value type* !*multiplicity* !*Definition*
+!===
+|=== 
+
+[[Module-section]]
+
+==== Module
+
+each of a set of standardized parts or independent units that can be used to construct a more complex structure.
+
+NOTE:  The concept `module` is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. The power of the concept is that modules can be reused in different systems (specify once, use many). MOdules can be imported from other programs. Modules can be replaced without affecting the rest of the system.
+
+[cols="1a"]
+|===
+[cols="15,20,5,55",frame=none,grid=none,options="header"]
+!===
+!{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
+!===
+[cols="15,20,5,55",frame=none,grid=none,options="header"]
+!===
+!{set:cellbgcolor:#DDDDDD} *Attribute* !*Value type* !*multiplicity* !*Definition*
+!===
+|=== 
+
 [[NormativeStatement-section]]
 
 ==== NormativeStatement
 
-expression in a document conveying information
+expression in a document conveying information required to define conformance
 
-NOTE: Includes all statements in a document not part of the normative requirements, recommendations, or conformance tests. Included for completeness.
+NOTE:  Includes all normative statements in a document including requirements, recommendations, permissions, and conformance tests. Included for completeness.
 
 [cols="1a"]
 |===
@@ -246,9 +282,9 @@ NOTE: Includes all statements in a document not part of the normative requiremen
 !===
 !{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
 
-!{set:cellbgcolor:#FFFFFF}requirements  ! <<NormativeStatement-section,NormativeStatement>> ![1..*] !Requirements classes, recommendations, and permissions that this requirements module contains.
+!{set:cellbgcolor:#FFFFFF}  ! <<NormativeStatement-section,NormativeStatement>> ![] !
  
-!{set:cellbgcolor:#FFFFFF}  ! <<RequirementsModule-section,RequirementsModule>>  ![] !
+!{set:cellbgcolor:#FFFFFF}  ! <<Specification-section,Specification>>  ![] !
 !===
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
@@ -269,6 +305,10 @@ uses “may” and is used to prevent a requirement from being “over interpret
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
 !{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
+
+!{set:cellbgcolor:#FFFFFF}  ! <<Permission-section,Permission>> ![] !
+ 
+!{set:cellbgcolor:#FFFFFF}  ! <<RequirementsModule-section,RequirementsModule>>  ![] !
 !===
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
@@ -303,9 +343,12 @@ uses “may” and is used to prevent a requirement from being “over interpret
 ==== Recommendation
 
 expression in the content of a standard conveying that among several possibilities one is recommended as particularly suitable, without mentioning or excluding others, or that a certain course of action is preferred but not necessarily required, or that (in the negative form) a certain possibility or course of action is deprecated but not prohibited 
-[ISO Directives Part 2]
 
-NOTE:: Although using normative language, a recommendation is not a requirement. The usual form replaces the shall (imperative or command) of a requirement with a should (suggestive or conditional). 
+NOTE:  Although using normative language, a recommendation is not a requirement. The usual form replaces the shall (imperative or command) of a requirement with a should (suggestive or conditional). 
+
+NOTE:  Recommendations are not tested and therefore have no related conformance test.
+
+[ISO Directives Part 2]
 
 [cols="1a"]
 |===
@@ -326,13 +369,13 @@ NOTE:: Although using normative language, a recommendation is not a requirement.
 expression in the content of a standard conveying criteria to be fulfilled if compliance with the standard is to be claimed and from which no deviation is permitted
 [ISO Directives Part 2] 
 
-NOTE:: Each requirement is a normative criterion for a single standardization target type. In this standard, requirements will be associated to conformance tests that can be used to prove compliance to the underlying criteria by the standardization target. 
+NOTE:  Each requirement is a normative criterion for a single type of standardization target. In the ModSpec, requirements are associated to conformance tests that can be used to prove compliance to the underlying criteria by the standardization target. 
 
-The implementation of a requirement is dependent on the type of specification being written. A data specification requires data structures, but a procedural specification requires software implementations. The view of a standard in terms of a set of testable requirements allows us to use set descriptions of both the standard and its implementations.
+The implementation of a requirement is dependent on the type of standard being written. A data standard requires data structures, but a procedural standard requires software implementations. The view of a standard in terms of a set of testable requirements allows us to use set descriptions of both the standard and its implementations.
 
-The specification of a requirement is usually expressed in terms of a model of the standardization target type, such as a UML model, or an XML or SQL schema. Anything without a defined test is a priori not testable and thus would be better expressed as a recommendation. 
+The specification of a requirement is usually expressed in terms of a model of the standardization target type, such as a UML model, or an XML or SQL schema. Anything without a defined test is a-priori not testable and thus would be better expressed as a recommendation. 
 
-Requirements use normative language and in particular are commands and use the imperative shall or similar imperative constructs. Statements in standards which are not requirements and need to be either conditional or future tense normally use will and should not be confused with requirements that use shall imperatively 
+Requirements use normative language and in particular are commands and use the imperative "shall" or similar imperative constructs. Statements in standards which are not requirements and need to be either conditional or future tense normally use "will" and should not be confused with requirements that use "shall" imperatively 
 
 [cols="1a"]
 |===
@@ -340,13 +383,17 @@ Requirements use normative language and in particular are commands and use the i
 !===
 !{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
 
+!{set:cellbgcolor:#FFFFFF}parts  ! <<Requirement-section,Requirement>> ![0..*] !Collection of requirements that are parts to this requirement. Satisfaction of all requirement parts are necessary for this requirement to be satisfied.
+ 
+!{set:cellbgcolor:#FFFFFF}  ! <<Requirement-section,Requirement>>  ![] !
+
+!{set:cellbgcolor:#FFFFFF}requirements  ! <<Requirement-section,Requirement>> ![1..*] !Requirements classes, recommendations, and permissions that this requirements module contains.
+ 
+!{set:cellbgcolor:#FFFFFF}  ! <<RequirementsModule-section,RequirementsModule>>  ![] !
+
 !{set:cellbgcolor:#FFFFFF}requirements  ! <<Requirement-section,Requirement>> ![1..*] !Corresponding requirement of requirement part that this conformance test is supposed to test against.
  
 !{set:cellbgcolor:#FFFFFF}  ! <<ConformanceTest-section,ConformanceTest>>  ![1] !
-
-!{set:cellbgcolor:#FFFFFF}parts  ! <<Requirement-section,Requirement>> ![0..*] !Collection of requirements that are parts to this requirement. Satisfaction of all requirement parts are necessary for this requriement to be satisfied.
- 
-!{set:cellbgcolor:#FFFFFF}  ! <<Requirement-section,Requirement>>  ![] !
 !===
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
@@ -358,9 +405,9 @@ Requirements use normative language and in particular are commands and use the i
 
 ==== RequirementsClass
 
-aggregate of all requirements (Clause 4.21) that must all be satisfied to satisfy a conformance test Class
+aggregate of all requirements (Clause 4.21) for a single standardization target that must all be satisfied to pass a conformance test Class
 
-NOTE:: There is some confusion possible here, since the testing of indirect dependencies seems to violate this definition. But the existence of an indirect dependency implies that the test is actually a test of the existence of the relationship from the original target to something that has a property (satisfies a condition or requirement from another requirements class). 
+NOTE:  There is some confusion possible here, since the testing of indirect dependencies seems to violate this definition. But the existence of an indirect dependency implies that the test is actually a test of the existence of the relationship from the original target to something that has a property (satisfies a condition or requirement from another requirements class). 
 
 [cols="1a"]
 |===
@@ -388,9 +435,9 @@ NOTE:: There is some confusion possible here, since the testing of indirect depe
 
 ==== RequirementsModule
 
-a set of related requirements (Clause 4.22), recommendations (Clause 4.20) and permissions (Clause 4.18) all with a single requirements class (Clause 4.26)
+a set of related requirements (Clause 4.22), recommendations (Clause 4.20) and permissions (Clause 4.18) within a single requirements class (Clause 4.26)
 
-NOTE:: This term is included to be consistent with the use of modules in ISO 19105. 
+NOTE::  This term is included to be consistent with the use of modules in ISO 19105. 
 
 [cols="1a"]
 |===
@@ -414,9 +461,11 @@ NOTE:: This term is included to be consistent with the use of modules in ISO 191
 
 ==== Specification
 
-document containing recommendations, requirements and conformance tests for those requirements 
+document containing recommendations, requirements, permissions, and conformance tests
 
-NOTE:: This definition is included for completeness. See Clause 5.3. This does not restrict what else a specification may contain, as long as it does contain the three types of element cited. 
+NOTE:  This definition is included for completeness. 
+
+NOTE:  In the OGC, there are Abstract Specifications and Implementation Standards. Abstract Specifications may of may not be testable. Further, Abstract Specifications may not be directly implementable. Implementation Standards are always testable and contain a conformance test suite.
 
 [cols="1a"]
 |===
@@ -434,11 +483,9 @@ NOTE:: This definition is included for completeness. See Clause 5.3. This does n
 
 ==== Standard
 
-document containing recommendations (Clause 4.20), requirements (Clause 4.21) and conformance tests (Clause 4.6) that has been approved by a legitimate Standards Body
+a specification that has been approved by a legitimate Standards Body 
 
-(original) specification that has been approved by a legitimate Standards Body 
-
-NOTE:: This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.  The legitimate Standards Bodies for OGC consist of OGC, ISO and any of the other standards bodies accepted and used as a source of normative references by OGC or ISO in their standards. In the normal meaning of the word standard, there are other conditions that may be required, but this standard has chosen to ignore them in the process of abstraction. 
+NOTE::  This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.  
 
 [cols="1a"]
 |===
@@ -469,7 +516,7 @@ NOTE:: This definition is included for completeness. Standard and specification 
 ==== StandardizationTarget
 
 entity to which some requirements of a standard apply 
-NOTE The standardization target is the entity which may receive a certificate of conformance for a requirements class. 
+NOTE::   The standardization target is the entity which may receive a certificate of conformance for a requirements class. 
 
 [cols="1a"]
 |===
@@ -491,9 +538,7 @@ NOTE The standardization target is the entity which may receive a certificate of
 
 type of entity or set of entities to which the requirement (Clause 4.21) of a standard (Clause 4.25) apply
 
-NOTE:: The standardization target types give the standardization targets a typing system similar to the UML classifiers. In general, the types inherit from one another in the same way that UML classes do. The same class/metaclass semantics apply, and two targets can be considered to have the same type (in a particular situation) if their instantiation types share the appropriate supertype, as is the case in UML. In OGC for example, all service types that must pass the OWS (Open Web Services) Common specification are some extension of the Open Web Service standardization target type. This makes OWS Common a default global core for all OGC Services. 
-
-In some cases, the standardization target type may be another specification. A GML application schema is a standardization target for the GML standard, but is in turn a specification of instances of that application schema. 
+NOTE:  For example, the standardization target type for The OGC API – Features Standard are Web APIs. The standardization target type for the CDB Standard is “datastore”. It is important to understand that a standard’s root standardization target type can have sub-types, and that there can be a hierarchy of target types. For example, a Web API can have sub types of client, server, security, and so forth. As such, each requirements class can have a standardization target type that is a sub-type of the root.
 
 [cols="1a"]
 |===
@@ -501,13 +546,13 @@ In some cases, the standardization target type may be another specification. A G
 !===
 !{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
 
-!{set:cellbgcolor:#FFFFFF}Type  ! <<StandardizationTargetType-section,StandardizationTargetType>> ![] !Type of the standardization target type
- 
-!{set:cellbgcolor:#FFFFFF}  ! <<StandardizationTarget-section,StandardizationTarget>>  ![] !
-
 !{set:cellbgcolor:#FFFFFF}targetType  ! <<StandardizationTargetType-section,StandardizationTargetType>> ![1] !Type of standardization target
  
 !{set:cellbgcolor:#FFFFFF}  ! <<RequirementsClass-section,RequirementsClass>>  ![0..*] !
+
+!{set:cellbgcolor:#FFFFFF}Type  ! <<StandardizationTargetType-section,StandardizationTargetType>> ![] !Type of the standardization target type
+ 
+!{set:cellbgcolor:#FFFFFF}  ! <<StandardizationTarget-section,StandardizationTarget>>  ![] !
 !===
 [cols="15,20,5,55",frame=none,grid=none,options="header"]
 !===
@@ -524,7 +569,7 @@ Original
 expression in a document conveying information 
 [ISO Directives Part 2] 
 
-NOTE:: Includes all statements in a document not part of the normative requirements, recommendations or conformance tests. Included for completeness. 
+NOTE::  Includes all statements in a document not part of the normative requirements, recommendations or conformance tests. Included for completeness. 
 
 [cols="1a"]
 |===
@@ -568,7 +613,7 @@ NOTE:: Includes all statements in a document not part of the normative requireme
 
 evidence of conformance to all or part of a standard, awarded for passing one or more of the conformance test classes specified in that standard 
 
-NOTE:: Certificates‖ do not have to be instantiated documents; having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products. 
+NOTE:  Certificates‖ do not have to be instantiated documents; having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products. 
 Each certificate of conformance is awarded to a standardization target. 
 
 [cols="1a"]
@@ -591,9 +636,9 @@ Original
 
 another requirements class (the dependency) whose requirements are defined to also be requirements of this requirements class
 
-NOTE:: A direct dependency of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency. Any tests associated to this dependency can be applied to this requirements class. 
+NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated to this dependency can be applied to this requirements class. 
 
-When testing a direct dependency, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency. 
+When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class. 
 
 [cols="1a"]
 |===
@@ -611,10 +656,9 @@ When testing a direct dependency, the standardization target is directly subject
 
 ==== Extension
 
-Original
 requirements class which has a direct dependency on another requirements class 
 
-NOTE:: Here extension is defined on requirements class so that their implementation may be software extensions in a manner analogous to the extension relation between the requirements classes. 
+NOTE:: Here an extension of a requirements class is defined on requirements class so that their implementation may be software extensions in a manner analogous to the extension relation between the requirements classes. 
 
 [cols="1a"]
 |===
@@ -632,12 +676,9 @@ NOTE:: Here extension is defined on requirements class so that their implementat
 
 ==== Home
 
-Original
-
 official statement of a requirement or recommendation that is the precedent for any other version repeated or rephrased elsewhere 
 
 NOTE:: Explanatory text associated to normative language often repeats or rephrases the requirement to aid in the discussion and understanding of the official version of the normative language. Since such restatements are often less formal than the original source and potentially subject to alternate interpretation, it is important to know the location of the home official version of the language. 
-These alternative statements use non-normative language and are statements using the definitions of the ISO Directives Part 2. 
 
 [cols="1a"]
 |===
@@ -655,14 +696,10 @@ These alternative statements use non-normative language and are statements using
 
 ==== IndirectDependency
 
-Original
-
 requirements class with a different standardization target which is used, produced or associated to by the implementation of this requirements class 
 
-NOTE:: In this instance, as opposed to the direct dependency, the test against the consumable or product used or produced by the requirements class does not directly test the requirements class, but tests only its side effects. Hence, a particular type of feature service could be required to produce valid XML documents, but the test of validity for the XML document is not directly testing the service, but only indirectly testing 
-
-the validity of its output. Direct dependencies test the same standardization target, but indirect dependencies test related but different standardization targets. 
-The standardization target of the indirect dependency is different from the target of ―this requirements class‖ but it may be of the same or related standardization target type. For example, if one service is related to another second service, then a service requirement may be placed against the second associated service to assure that the first service has access to its functionality. For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind. 
+NOTE: In this instance, as opposed to the direct dependency of a requirements class, the test against the consumable or product used or produced by the requirements class does not directly test the requirements class, but tests only its side effects. Hence, a particular type of feature service could be required to produce valid XML documents, but the test of validity for the XML document is not directly testing the service, but only indirectly testing the validity of its output. Direct dependencies test the same standardization target, but indirect dependencies test related but different standardization targets. +
+For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind. 
 
 [cols="1a"]
 |===
@@ -697,48 +734,17 @@ UML model package that does not contain any subpackages, but contains classifier
 !===
 |=== 
 
-[[Model-section]]
-
-==== Model
-
-Original
-
-theoretical construct that represents something, with a set of variables and a set of logical and quantitative relationships between them.
-
-NOTE Derived from Wikipedia 
-
-The "theoretical construct" is essentially a conceptual metaphor with the target of the metaphor as the thing being modeled, and the source of the metaphor as the model. The terms are almost interchangeable, with model being preferred when the source is a constructed entity, and metaphor being preferred when the source already exists, and the emphasis is the mapping between it and the target. 
-
-The definition in ISO 19101, Clause 4.4 is conceptual model - model that defines concepts of a universe of discourse. 
-While adequate in the context of a ―universe of discourse‖ as the something addressed by a standard, a model need not have any ―universality‖ property at all. Most often models are representative of only a relatively small portion of a larger universe, and part of the process of modeling is to factor out the 
-properties and things to which no interest is directed within the present standard It also fails to define ―model‖ which is in fact the central issue within this discussion. 
-The abstract or conceptual is actually redundant and will often be dropped in the text. Models are by their vary nature not the same as what they are describing, and thus must contain a conceptual metaphor to describe their relationship to the target (the thing being described) of the model. This inherently makes them abstractions. 
-
-[cols="1a"]
-|===
-[cols="15,20,5,55",frame=none,grid=none,options="header"]
-!===
-!{set:cellbgcolor:#DDDDDD} *Role name* !*Target class* !*multiplicity*  !*Definition*
-!===
-[cols="15,20,5,55",frame=none,grid=none,options="header"]
-!===
-!{set:cellbgcolor:#DDDDDD} *Attribute* !*Value type* !*multiplicity* !*Definition*
-!===
-|=== 
-
 [[Profile-section]]
 
 ==== Profile
 
-Original
-
 specification or standard consisting of a set of references to one or more base standards and/or other profiles, and the identification of any chosen conformance test classes, conforming subsets, options and parameters of those base standards, or profiles necessary to accomplish a particular function. 
 
-[ISO/IEC TR 10000-1] 
+NOTE:  In the usage of the ModSpec, a profile will be a set of requirements classes or conformance classes (either preexisting or locally defined) of the base standards.
 
-NOTE:: This definition has been adopted from ISO 10000: Part 1. The wording has been changed to accommodate the shared vocabulary of OGC and ISO TC 211 and for editorial reasons. The original text is ―A set of one or more base standards and/or ISPs, and, where applicable, the identification of chosen classes, conforming subsets, options and parameters of those base standards, or ISPs necessary to accomplish a particular function.‖ 
-In the usage of this standard, a profile will be a set of requirements classes or conformance classes (either preexisting or locally defined) of the base standards. 
-This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile. 
+This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile.
+
+[ISO/IEC TR 10000-1] 
 
 [cols="1a"]
 |===
